--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "require": {
         "php": "^7.2",
         "illuminate/database": "^6.0",
-        "illuminate/console": "^5.5|^6.0"
+        "illuminate/console": "^5.5|^6.0",
+        "ext-json": "*",
+        "nesbot/carbon": "^2.24"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
