--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/.idea
+/.idea/
 /vendor
 /node_modules
 package-lock.json
@@ -8,3 +8,4 @@ phpunit.xml
 .phpunit.result.cache
 .DS_Store
 Thumbs.db
+/build/
