--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "MattSplat\\TableQueries\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "MattSplat\\TableQueries\\Tests\\": "tests"
+        }
+    },
     "authors": [
         {
             "name": "matt",
